@@ -1,3 +1,14 @@
+2010-07-12  Alexander Pavlov  <apavlov@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        [Chromium] Crash when stepping on a breakpoint while debugging Web Inspector
+        https://bugs.webkit.org/show_bug.cgi?id=41958
+
+        * page/PageGroupLoadDeferrer.cpp:
+        (WebCore::PageGroupLoadDeferrer::PageGroupLoadDeferrer):
+        * page/PageGroupLoadDeferrer.h:
+
 2010-07-12  François Sausset  <sausset@gmail.com>
 
         Reviewed by Kenneth Rohde Christiansen.
